qa/suites/upgrade/jewel-x/parallel: upgrade mons before osds
Signed-off-by: Sage Weil <sage@redhat.com>
(cherry picked from commit 3c80e15c3b34ac2adc4e70f09929e3bc01785594)

--- a/qa/suites/upgrade/jewel-x/parallel/3-upgrade-sequence/upgrade-mon-osd-mds.yaml
+++ b/qa/suites/upgrade/jewel-x/parallel/3-upgrade-sequence/upgrade-mon-osd-mds.yaml
@@ -13,6 +13,11 @@ upgrade-sequence:
    - sleep:
        duration: 60
    - ceph.restart:
+       daemons: [mon.b, mon.c]
+       wait-for-healthy: true
+   - sleep:
+       duration: 60
+   - ceph.restart:
        daemons: [osd.0, osd.1]
        wait-for-healthy: true
    - sleep:
@@ -25,9 +30,6 @@ upgrade-sequence:
       mon.b:
         - sudo ceph osd crush tunables jewel
    - print: "**** done ceph osd crush tunables jewel"
-   - ceph.restart:
-       daemons: [mon.b, mon.c]
-       wait-for-healthy: true
    - sleep:
        duration: 60
    - ceph.restart:
