--- a/qa/suites/upgrade/hammer-jewel-x/parallel/7-upgrade-sequence/upgrade-by-daemon.yaml
+++ b/qa/suites/upgrade/hammer-jewel-x/parallel/7-upgrade-sequence/upgrade-by-daemon.yaml
@@ -2,13 +2,13 @@ meta:
 - desc: |
    upgrade the ceph cluster,
    upgrate in two steps
-   step one ordering: mon.a, osd.0, osd.1
-   step two ordering: mon.b, mon.c, osd.2, osd.3
+   step one ordering: mon.a, mon.b, mon.c, osd.0, osd.1
+   step two ordering: osd.2, osd.3
    ceph expected to be healthy state after each step
 upgrade-sequence2:
    sequential:
    - ceph.restart:
-       daemons: [mon.a]
+       daemons: [mon.a, mon.b, mon.c]
        wait-for-healthy: true
    - sleep:
        duration: 60
@@ -22,11 +22,6 @@ upgrade-sequence2:
       mon.b:
         - sudo ceph osd crush tunables jewel
    - print: "**** done ceph osd crush tunables jewel"
-   - ceph.restart:
-       daemons: [mon.b, mon.c]
-       wait-for-healthy: true
-   - sleep:
-       duration: 60
    - ceph.restart:
        daemons: [osd.2, osd.3]
        wait-for-healthy: false
