qa/tests: added rados/mgr/tasks/dashboard.yaml tests
Signed-off-by: Yuri Weinstein <yweinste@redhat.com>

--- a/qa/suites/upgrade/mimic-x/parallel/3-upgrade-sequence/upgrade-all.yaml
+++ b/qa/suites/upgrade/mimic-x/parallel/3-upgrade-sequence/upgrade-all.yaml
@@ -4,7 +4,7 @@ meta:
 upgrade-sequence:
    sequential:
    - ceph.restart:
-       daemons: [mon.a, mon.b, mon.c, mgr.x, mgr.y]
+       daemons: [mon.a, mon.b, mon.c, mgr.x, mgr.y,mgr.z]
        mon-health-to-clog: false
        wait-for-healthy: false
    - exec:
