mgr/dashboard: Resolve some npm audit issues
Reduced the number of vulnerabilities from 16 (1 low, 3 moderate, 12 high)
to 2 (1 low, 1 moderate)

Jest changed the location of tsconfig.spec.json

Signed-off-by: Tiago Melo <tmelo@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/angular.json
+++ b/src/pybind/mgr/dashboard/frontend/angular.json
@@ -196,7 +196,7 @@
           "options": {
             "tsConfig": [
               "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
+              "tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
