--- a/src/pybind/mgr/dashboard/frontend/package.json
+++ b/src/pybind/mgr/dashboard/frontend/package.json
@@ -39,7 +39,7 @@
     "lint:tslint": "ng lint",
     "lint:prettier": "prettier --list-different \"{src,e2e}/**/*.{ts,scss}\"",
     "lint:html": "htmllint src/app/**/*.html && html-linter --config html-linter.config.json",
-    "lint:tsc": "npm run test:config && tsc -p src/tsconfig.app.json --noEmit --noUnusedLocals --noUnusedParameters && tsc -p src/tsconfig.spec.json --noEmit --noUnusedLocals --noUnusedParameters && tsc -p e2e/tsconfig.e2e.json --noEmit --noUnusedLocals --noUnusedParameters",
+    "lint:tsc": "npm run test:config && tsc -p src/tsconfig.app.json --noEmit --noUnusedLocals --noUnusedParameters && tsc -p tsconfig.spec.json --noEmit --noUnusedLocals --noUnusedParameters && tsc -p e2e/tsconfig.e2e.json --noEmit --noUnusedLocals --noUnusedParameters",
     "lint": "npm run lint:tsc && npm run lint:tslint && npm run lint:prettier && npm run lint:html",
     "fix:prettier": "prettier --write \"{src,e2e}/**/*.{ts,scss}\"",
     "fix:tslint": "npm run lint:tslint -- --fix",
@@ -77,14 +77,14 @@
     "testURL": "http://localhost/"
   },
   "dependencies": {
-    "@angular/animations": "8.2.8",
-    "@angular/common": "8.2.8",
-    "@angular/compiler": "8.2.8",
-    "@angular/core": "8.2.8",
-    "@angular/forms": "8.2.8",
-    "@angular/platform-browser": "8.2.8",
-    "@angular/platform-browser-dynamic": "8.2.8",
-    "@angular/router": "8.2.8",
+    "@angular/animations": "8.2.14",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/forms": "8.2.14",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
     "@auth0/angular-jwt": "2.1.1",
     "@ngx-translate/i18n-polyfill": "1.0.0",
     "@swimlane/ngx-datatable": "15.0.2",
@@ -110,14 +110,14 @@
     "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.803.6",
-    "@angular/cli": "8.3.6",
-    "@angular/compiler-cli": "8.2.8",
-    "@angular/language-service": "8.2.8",
-    "@compodoc/compodoc": "1.1.10",
+    "@angular-devkit/build-angular": "0.803.19",
+    "@angular/cli": "8.3.19",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/language-service": "8.2.14",
+    "@compodoc/compodoc": "1.1.11",
     "@types/jasmine": "3.4.0",
     "@types/jasminewd2": "2.0.6",
-    "@types/jest": "24.0.18",
+    "@types/jest": "24.0.23",
     "@types/lodash": "4.14.141",
     "@types/node": "12.7.8",
     "codelyzer": "5.1.2",
@@ -126,8 +126,8 @@
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
     "jest": "24.9.0",
-    "jest-canvas-mock": "2.1.1",
-    "jest-preset-angular": "7.1.1",
+    "jest-canvas-mock": "2.2.0",
+    "jest-preset-angular": "8.0.0",
     "jest-silent-reporter": "0.1.2",
     "npm-run-all": "^4.1.5",
     "prettier": "1.18.2",
